# libgcal

./: .gitignore  CMakeLists.txt  COPYING  Changelog.txt  Doxyfile.cmake  Doxyfile.in  INSTALL  Makefile.am  README  configure.ac  libgcal-uninstalled.pc.in  libgcal.pc.cmake  libgcal.pc.in
cmake/: LibGCalConfig.cmake.in  cmake_uninstall.cmake.in
cmake/modules/: FindLibGCal.cmake  SetAutotoolsVariables.cmake  SetBuildType.cmake
debian/: changelog  control  copyright  libgcal0-dev.install  libgcal0.install  rules
examples/: Makefile  addeditdel.c  addnew.c  getallcontacts.c  semantic.cache  semantic.cache~  updatecal.c
inc/: atom_parser.h  curl_debug_gcal.h  gcal.h  gcal_parser.h  gcal_status.h  gcalendar.h  gcont.h  gcontact.h  internal_gcal.h  semantic.cache  semantic.cache~  xml_aux.h
m4/: auxdevel.m4
src/: CMakeLists.txt  atom_parser.c  curl_debug_gcal.c  gcal.c  gcal_parser.c  gcal_status.c  gcalendar.c  gcont.c  gcontact.c  msvc_hacks.h  semantic.cache  xml_aux.c
utests/: 3entries_recurrence.xml  4entries_location.xml  CMakeLists.txt  calendar_documentation.xml  contact_documentation.xml  empty_photo.xml  fullcalendar.xml  fullcontact.xml  gcalendar.xml  mismatch.xml  semantic.cache  semantic.cache~  supercontact.xml  up_deleted_event.xml  up_new_delete_contact.xml  utest.c  utest_contact.c  utest_contact.h  utest_debug.c  utest_debug.h  utest_edit.c  utest_edit.h  utest_gcal.c  utest_gcal.h  utest_query.c  utest_query.h  utest_screw.c  utest_screw.h  utest_userapi.c  utest_userapi.h  utest_xmlmode.c  utest_xmlmode.h  utest_xpath.c  utest_xpath.h  utils.c  utils.h  with_photo.xml
